# numsrv

./: .gitignore  .gitmodules  README.md  index.html  main.js  package-lock.json
module/: CMakeLists.txt  setup.py
module/src/: BinaryReadWrite.cpp  BinaryReadWrite.hpp  Common.cpp  Common.hpp  CompressSize.cpp  CompressSize.hpp  CubeCommon.cpp  CubeCommon.hpp  CubeNormalize.cpp  CubeNormalizeWithCube.cpp  CubePrediction.cpp  CubeReader.cpp  CubeReader.hpp  CubeWriter.cpp  CubeWriter.hpp  Db.cpp  Db.hpp  Dim.cpp  Dim.hpp  DimItem.cpp  DimItem.hpp  Language.cpp  Language.hpp  Types.hpp  main.cpp
web/: package.json  webpack.config.js
web-common/: cubeBrowser.css  cubeBrowser.jsx  dimBrowser.css  dimBrowser.jsx  dimCombo.jsx  flags.js  package-lock.json  package.json  search.css  search.jsx  settings.jsx  trans.js  units.js
web-server/: app.py  converters.py  readme  server.py
web/src/: cubeDetails.jsx  dimDetails.jsx  home.jsx  index.html  index.jsx  loadJs.js
